--- a/gfolding.cabal
+++ b/gfolding.cabal
@@ -14,7 +14,7 @@ version:            0.1.0.0
 -- The license under which the package is released.
 -- license:
 author:             Nigel Stepp
-maintainer:         ndstepp@hrl.com
+maintainer:         stepp@atistar.net
 
 -- A copyright notice.
 -- copyright:
@@ -22,7 +22,7 @@ maintainer:         ndstepp@hrl.com
 extra-source-files: CHANGELOG.md
 
 library
-    exposed-modules:  MyLib, Gfolds
+    exposed-modules:  Gfolds
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -34,17 +34,3 @@ library
     hs-source-dirs:   src
     default-language: Haskell2010
 
-executable gfolding
-    main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:
-        base ^>=4.14.3.0,
-        gfolding
-
-    hs-source-dirs:   app
-    default-language: Haskell2010
