--- a/gfolding.cabal
+++ b/gfolding.cabal
@@ -30,7 +30,7 @@ library
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     ghc-options: -pgmL markdown-unlit
-    build-depends:    base ^>=4.14.3.0, fgl, markdown-unlit
+    build-depends:    base >=4.14 && < 5, fgl, markdown-unlit
     hs-source-dirs:   src
     default-language: Haskell2010
 
